--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -23,6 +23,9 @@
         left: 50%;
         transform: translate(-50%, -32%);
     }
+    .mobileNav {
+        display: none;
+    }
 }
 
 //contact section//
