fixed specificity for mobile nav media queries for contact page

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -98,7 +98,7 @@
         opacity: 0;
     }
 
-    .mobileNav {
+    .contactHeader .mobileNav {
         display: block;
         position: fixed;
         top: 0;
