updated media queries for mobile nav menu

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -57,6 +57,7 @@
 
     //.hamburger menu needs more specificity than what was written in the original SCSS in order for the media query styles to apply
     //clean code below
+
     header nav .hamburger { 
         all: revert;
         position: relative;
@@ -64,15 +65,15 @@
         width: 35px;
         cursor: pointer;
         appearance: none;
-        background-color: $white;
+        background: none;
         outline: none;
         border: none;
         order: -1;
-        z-index: 3;
+        z-index: 100;
     }
 
     .hamburger:hover {
-        background-color: $white;
+        background: none;
     }
 
     .hamburger .bar, .hamburger:after, .hamburger:before {
@@ -80,7 +81,7 @@
         display: block;
         width: 100%;
         height: 3px;
-        background-color: black;
+        background-color: $black;
         margin: 6px 0px;
         transition: 0.4s;
     }
@@ -98,18 +99,18 @@
         opacity: 0;
     }
 
-    .contactHeader .mobileNav {
+    .mobileNav {
         display: block;
         position: fixed;
         top: 0;
         right: 100%;
         min-width: 50%;
         height: 100%;
-        z-index: 2;
-        background-color: $plantGreen;
-        opacity: 0.9;
+        z-index: 98;
+        background-color: $lightgreen;
+        opacity: 0.95;
         padding-top: 12vh;
-        transition: 0.5s;
+        transition: 0.5s ease-in-out;
     }
 
     .mobileNav.activated {
@@ -118,19 +119,20 @@
         
     .mobileNav a {
             display: block;
+            width: 70%;
             text-align: center;
             margin: 0 auto;
-            padding: 2.5rem;
+            padding: 2rem 2.5rem;
             text-transform: uppercase;
-            color: white;
+            color: $white;
             font-weight: 700;
             font-size: 1.5rem;
             letter-spacing: 0.5rem;
-            //having issues with transition for hover, it's not working
+            transition: all 0.25s;
         }
 
     .mobileNav a:hover {
-        color: black;
+        color: $black;
         
     }
     .hero .wrapper {
@@ -236,6 +238,20 @@
 }
 
 @media (max-width: 480px) {
+
+    .mobileNav,
+    .contactHeader .mobileNav {
+        min-width: 100%;
+    } 
+
+    .mobileNav a {
+        padding: 2rem 0;
+    }
+
+    .mobileNav.activated {
+        right: 0;
+    }
+
     .shop .productGallery li {
         max-width: 90%;
         margin: 0 auto;
