--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -47,9 +47,11 @@ header nav {
         }
     }
 
-    .hamburger {
+    .hamburger,
+    .mobileNav {
         display: none;
     }
+
 
 //header section//
 header {
@@ -142,11 +144,21 @@ header {
                     text-decoration: line-through;
                 }
             }
-            button {
-                position: absolute;
-            }
         }
     }
+}
+
+.plusIcon {
+    position: absolute;
+    top: 11.5rem;
+    right: 0.75rem;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 1.5rem;
+    background-color: $plantGreen;
+    font-size: 1.15rem;
+    padding: 0;
+    margin: 0;
 }
 
 .shopBtn {
