fixed mobile menu specificity

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -99,7 +99,7 @@
         opacity: 0;
     }
 
-    .mobileNav {
+    body .mobileNav {
         display: block;
         position: fixed;
         top: 0;
