--- a/styles/style.css
+++ b/styles/style.css
@@ -629,7 +629,7 @@ button:hover {
   .hamburger.activated .bar {
     opacity: 0;
   }
-  .mobileNav {
+  body .mobileNav {
     display: block;
     position: fixed;
     top: 0;
