--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -239,14 +239,9 @@
 
 @media (max-width: 480px) {
 
-    .mobileNav,
-    .contactHeader .mobileNav {
+    body .mobileNav {
         min-width: 100%;
     } 
-
-    .mobileNav a {
-        padding: 2rem 0;
-    }
 
     .mobileNav.activated {
         right: 0;
