--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -52,6 +52,24 @@ header nav {
         display: none;
     }
 
+    .cart {
+        position: relative;
+    }
+
+    .cartItemNumber {
+        position: absolute;
+        top: -0.3rem;
+        right: -0.3rem;
+        background-color: $lightgreen;
+        color: $white;
+        font-size: 0.8rem;
+        font-weight: 400;
+        text-align: center;
+        padding-top: 0.1rem;
+        width: 1.2rem;
+        height: 1.2rem;
+        border-radius: 0.6rem;
+    }
 
 //header section//
 header {
