--- a/styles/style.css
+++ b/styles/style.css
@@ -827,6 +827,25 @@ header nav .navHover:hover::after {
   display: none;
 }
 
+.cart {
+  position: relative;
+}
+
+.cartItemNumber {
+  position: absolute;
+  top: -0.3rem;
+  right: -0.3rem;
+  background-color: #5EA85E;
+  color: #fff;
+  font-size: 0.8rem;
+  font-weight: 400;
+  text-align: center;
+  padding-top: 0.1rem;
+  width: 1.2rem;
+  height: 1.2rem;
+  border-radius: 0.6rem;
+}
+
 header {
   height: 100vh;
   overflow: hidden;
