--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -9,8 +9,8 @@
 header nav {
     height: 10vh;
     position: fixed;
-    width: 100%;
     z-index: 100;
+    width: 100%;
     @include colors($white, 0, 0 0 8px rgba(0, 0, 0, 0.25));
     .wrapper ul {
         text-transform: uppercase;
@@ -78,6 +78,7 @@ header {
     height: 100vh;
     overflow: hidden;
     .hero {
+        margin-top: 10vh;
         height: 90vh;
         .textContainer {
             width: 50%;
@@ -203,7 +204,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 60%;
+    width: 55%;
     margin: 0 auto;
     border: 1px solid $lightgrey;
     border-radius: 1.5rem;
@@ -211,10 +212,22 @@ header {
 }
 
 .shopButtons button {
-    width: 2.3rem;
-    height: 2.3rem;
-    border-radius: 1.15rem;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 1rem;
+    padding: 0 0 0.2rem 0;
+    background-color: $lightgreen;
+    color: $white;
+    font-size: 1.5rem;
+}
 
+.shopButtons button:hover {
+    background-color: $plantGreen;
+}
+
+.shopButtons button:active {
+    width: 1.95rem;
+    height: 1.95rem;
 }
 
 .quantity {
