--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -56,6 +56,7 @@ header nav {
 
     .cart {
         position: relative;
+        cursor: pointer;
     }
 
     .cartItemNumber {
@@ -71,6 +72,27 @@ header nav {
         width: 1.2rem;
         height: 1.2rem;
         border-radius: 0.6rem;
+    }
+
+    .reviewCart {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        min-width: 12rem;
+        height: 10vh;
+        padding: 0 1rem;
+        background-color: $plantGreen;
+        border-radius: 0 0 10px 10px;
+        position: fixed;
+        top: 0;
+        right: 2rem;
+        z-index: 98;
+        background-color: $lightgreen;
+        transition: 0.5s ease-in-out;
+    }
+
+    .reviewCart.activated {
+        top: 10vh;
     }
 
 //header section//
