--- a/styles/style.css
+++ b/styles/style.css
@@ -831,6 +831,7 @@ header nav .navHover:hover::after {
 
 .cart {
   position: relative;
+  cursor: pointer;
 }
 
 .cartItemNumber {
@@ -846,6 +847,27 @@ header nav .navHover:hover::after {
   width: 1.2rem;
   height: 1.2rem;
   border-radius: 0.6rem;
+}
+
+.reviewCart {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  min-width: 12rem;
+  height: 10vh;
+  padding: 0 1rem;
+  background-color: #207200;
+  border-radius: 0 0 10px 10px;
+  position: fixed;
+  top: 0;
+  right: 2rem;
+  z-index: 98;
+  background-color: #5EA85E;
+  transition: 0.5s ease-in-out;
+}
+
+.reviewCart.activated {
+  top: 10vh;
 }
 
 header {
