--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -78,23 +78,28 @@ header nav {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        min-width: 12rem;
         height: 10vh;
+        min-width: 12rem;
         padding: 0 1rem;
-        background-color: $plantGreen;
         border-radius: 0 0 10px 10px;
         position: fixed;
         top: 0;
-        right: 2rem;
+        right: 0;
         z-index: 98;
-        background-color: $lightgreen;
+        background-color: $black;
+        color: $white;
         transition: 0.5s ease-in-out;
+        cursor: pointer;
     }
 
     .reviewCart.activated {
         top: 10vh;
     }
 
+    body .reviewCart:hover {
+        background-color: $plantGreen;
+        cursor: pointer;
+    }
 //header section//
 header {
     height: 100vh;
