--- a/styles/style.css
+++ b/styles/style.css
@@ -853,21 +853,27 @@ header nav .navHover:hover::after {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  min-width: 12rem;
   height: 10vh;
+  min-width: 12rem;
   padding: 0 1rem;
-  background-color: #207200;
   border-radius: 0 0 10px 10px;
   position: fixed;
   top: 0;
-  right: 2rem;
+  right: 0;
   z-index: 98;
-  background-color: #5EA85E;
+  background-color: #1A2428;
+  color: #fff;
   transition: 0.5s ease-in-out;
+  cursor: pointer;
 }
 
 .reviewCart.activated {
   top: 10vh;
+}
+
+body .reviewCart:hover {
+  background-color: #207200;
+  cursor: pointer;
 }
 
 header {
