fixed mobile nav links padding and updated shop button responsiveness

--- a/styles/style.css
+++ b/styles/style.css
@@ -639,7 +639,7 @@ button:hover {
     z-index: 98;
     background-color: #5EA85E;
     opacity: 0.95;
-    padding-top: 12vh;
+    padding-top: 14vh;
     transition: 0.5s ease-in-out;
   }
   .mobileNav.activated {
@@ -1039,7 +1039,7 @@ header .hero .imageContainer img:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 55%;
+  width: 8.5rem;
   margin: 0 auto;
   border: 1px solid #EAEAEA;
   border-radius: 1.5rem;
