--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -231,7 +231,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 55%;
+    width: 8.5rem;
     margin: 0 auto;
     border: 1px solid $lightgrey;
     border-radius: 1.5rem;
