--- a/styles/style.css
+++ b/styles/style.css
@@ -981,6 +981,10 @@ header .hero .imageContainer img:hover {
   position: relative;
   border: 1.5px solid #EAEAEA;
   border-radius: 10px;
+  transition: 0.4s;
+}
+.productGallery li:hover {
+  border: 2px #5EA85E solid;
 }
 .productGallery li .imageContainer {
   width: 100%;
@@ -1044,6 +1048,11 @@ header .hero .imageContainer img:hover {
   border: 1px solid #EAEAEA;
   border-radius: 1.5rem;
   font-size: 0.9rem;
+  transition: all 0.5s;
+}
+
+.shopButtons:hover {
+  background-color: #EAEAEA;
 }
 
 .shopButtons button {
