--- a/styles/style.css
+++ b/styles/style.css
@@ -851,29 +851,157 @@ header nav .navHover:hover::after {
 
 .reviewCart {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
   align-items: center;
-  height: 10vh;
-  min-width: 12rem;
-  padding: 0 1rem;
+  height: 90vh;
+  overflow-y: scroll;
+  min-width: 25%;
   border-radius: 0 0 10px 10px;
   position: fixed;
-  top: 0;
-  right: 0;
+  top: 10vh;
+  left: 100%;
   z-index: 98;
-  background-color: #1A2428;
-  color: #fff;
+  background-color: #fff;
+  color: #1A2428;
+  font-size: 0.8rem;
   transition: 0.5s ease-in-out;
-  cursor: pointer;
+  padding: 1rem;
 }
 
 .reviewCart.activated {
-  top: 10vh;
+  left: 75%;
 }
 
-body .reviewCart:hover {
-  background-color: #207200;
+.reviewCart .yourCart {
+  padding: 1rem 0;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-weight: 500;
+  background-color: #5EA85E;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(205, 205, 205, 0.695);
+  display: none;
+  transition: 0.4s;
+}
+
+.overlay.activated {
+  display: block;
+}
+
+.orderInfo {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.orderInfo .cartItemName {
+  width: 45%;
+}
+
+.cartItemInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid #EAEAEA;
+  border-bottom: 1px solid #EAEAEA;
+  padding: 0.5rem 0;
+}
+.cartItemInfo .cartItemProduct {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.cartItemInfo .cartItemProduct img {
+  width: 25%;
+}
+.cartItemInfo .cartItemProduct .productName {
+  width: 55%;
+  height: 100%;
+  padding: 0 0.5rem;
+}
+.cartItemInfo .cartItemProduct .productPrice {
+  width: 20%;
+  text-align: right;
+}
+
+.cartItemControls {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-top: 0.5rem;
+  font-size: 0.7rem;
+}
+.cartItemControls .cartItemRemove {
+  display: flex;
+  align-items: center;
   cursor: pointer;
+}
+.cartItemControls .cartItemRemove p {
+  padding: 0 0.5rem;
+}
+.cartItemControls .cartItemQuantity {
+  display: flex;
+  align-items: center;
+  border: 1px solid white;
+}
+.cartItemControls .cartItemQuantity p {
+  width: 2rem;
+  text-align: center;
+}
+.cartItemControls .cartItemQuantity button {
+  all: revert;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background: none;
+  border: none;
+  color: #fff;
+  padding: 0 0.25rem;
+  width: 1.2rem;
+  height: 1.2rem;
+  border-radius: 0.6rem;
+  background-color: #1A2428;
+}
+
+.subTotal,
+.tax,
+.finalTotal {
+  width: 100%;
+  text-align: right;
+  padding: 1rem 0 0 0;
+}
+
+.subTotal {
+  padding-top: 2rem;
+}
+
+.tax {
+  padding-bottom: 1rem;
+}
+
+.finalTotal {
+  padding-bottom: 2rem;
+}
+
+.checkoutBtn {
+  all: revert;
+  bottom: 1rem;
+  width: 100%;
+  padding: 1rem 0;
+  border-radius: 4px;
+  border: none;
+  background-color: #1A2428;
+  color: #fff;
 }
 
 header {
@@ -995,7 +1123,7 @@ header .hero .imageContainer img:hover {
 }
 .productGallery li .textContainer {
   width: 100%;
-  height: auto;
+  height: 160px;
   padding: none;
   border: none;
   border-radius: none;
@@ -1006,33 +1134,16 @@ header .hero .imageContainer img:hover {
 }
 .productGallery li .textContainer p {
   padding-top: 0.75rem;
+  height: 70px;
 }
 .productGallery li .textContainer .price {
   padding-bottom: 0.75rem;
+  align-self: flex-end;
 }
 .productGallery li .textContainer .price span {
   text-decoration: line-through;
 }
 
-/*.addToCartBtn {
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-    width: 2.3rem;
-    height: 2.3rem;
-    border-radius: 1.15rem;
-    background-color: $plantGreen;
-    font-size: 1.15rem;
-    padding: 0;
-    margin: 0;
-}
-
-.addToCartBtn:active {
-    width: 2.2rem;
-    height: 2.2rem;
-    font-size: 1.1rem;
-}
-*/
 .infoContainer {
   background-color: #fff;
   padding: 1rem;
