--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -61,7 +61,7 @@ header nav {
 
     .cartItemNumber {
         position: absolute;
-        top: -0.3rem;
+        top: 1rem;
         right: -0.3rem;
         background-color: $lightgreen;
         color: $white;
@@ -315,8 +315,31 @@ header {
                 border-radius: 10px 10px 0 0;
             }
         }
+        .plus {
+            all: revert;
+            width: 2.6rem;
+            height: 2.6rem;
+            padding: 0.6rem;
+            border: none;
+            background-color: $lightgreen;
+            border-radius: 1.3rem;
+            box-shadow: 0 0 0 rgba(0, 0, 0, 0.25);
+            position: absolute;
+            top: 0.75rem;
+            right: 0.75rem;
+            cursor: pointer;
+            transition: all 0.25s;
+            &:hover {
+                background-color: $black;
+            } 
+            img {
+                filter: brightness(0) invert(1);
+                padding-right: 0.15rem;
+                padding-top: 0.1rem;
+            }
+        }
         .textContainer {
-            @include boxModel(100%, 160px, none, none, none, none);
+            @include boxModel(100%, 140px, none, none, none, none);
             background-color: $white;
             border-top: none;
             border-radius: 0 0 10px 10px;
@@ -339,45 +362,6 @@ header {
     background-color: $white;
     padding: 1rem;
     border-radius: 0 0 10px 10px;
-}
-
-.shopButtons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 8.5rem;
-    margin: 0 auto;
-    border: 1px solid $lightgrey;
-    border-radius: 1.5rem;
-    font-size: 0.9rem;
-    transition: all 0.5s;
-}
-
-.shopButtons:hover {
-    background-color: $lightgrey;
-}
-
-.shopButtons button {
-    width: 2rem;
-    height: 2rem;
-    border-radius: 1rem;
-    padding: 0 0 0.2rem 0;
-    background-color: $lightgreen;
-    color: $white;
-    font-size: 1.5rem;
-}
-
-.shopButtons button:hover {
-    background-color: $plantGreen;
-}
-
-.shopButtons button:active {
-    width: 1.95rem;
-    height: 1.95rem;
-}
-
-.quantity {
-    margin: 0 1.25rem;
 }
 
 .shopBtn {
