--- a/styles/style.css
+++ b/styles/style.css
@@ -779,6 +779,34 @@ button:hover {
     font-size: 0.75rem;
   }
 }
+.modalContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(147, 147, 147);
+  border-radius: 6px;
+  width: 450px;
+  height: 500px;
+  text-align: center;
+  padding: 1rem;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 10000;
+}
+.modalContainer img {
+  width: 30%;
+}
+.modalContainer .modalClose {
+  align-self: flex-end;
+}
+.modalContainer form {
+  display: flex;
+  flex-direction: column;
+}
+
 header nav {
   height: 10vh;
   position: fixed;
@@ -997,10 +1025,10 @@ header nav .navHover:hover::after {
   all: revert;
   bottom: 1rem;
   width: 100%;
-  padding: 1rem 0;
-  border-radius: 4px;
+  padding: 1.4rem 0;
   border: none;
   background-color: #1A2428;
+  text-transform: uppercase;
   color: #fff;
 }
 
