--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -23,7 +23,6 @@
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     z-index: 10000;
-
     img {
         width: 30%;
     }
@@ -34,6 +33,18 @@
         display: flex;
         flex-direction: column;
     }
+}
+
+.modalOverlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(205, 205, 205, 0.695);
+        display: none;
+        transition: 0.4s;
+        z-index: 1000;
 }
 
 
@@ -150,6 +161,7 @@ header nav {
         background-color: rgba(205, 205, 205, 0.695);
         display: none;
         transition: 0.4s;
+        z-index: 1000;
       }
       
       .overlay.activated {
