--- a/styles/style.css
+++ b/styles/style.css
@@ -807,6 +807,18 @@ button:hover {
   flex-direction: column;
 }
 
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(205, 205, 205, 0.695);
+  display: none;
+  transition: 0.4s;
+  z-index: 1000;
+}
+
 header nav {
   height: 10vh;
   position: fixed;
@@ -920,6 +932,7 @@ header nav .navHover:hover::after {
   background-color: rgba(205, 205, 205, 0.695);
   display: none;
   transition: 0.4s;
+  z-index: 1000;
 }
 
 .overlay.activated {
