refined styling of popup modal

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -12,10 +12,11 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(147, 147, 147);
+    background-color: $white;
     border-radius: 6px;
     width: 450px;
     height: 500px;
+    font-size: 0.8rem;
     text-align: center;
     padding: 1rem;
     position: fixed;
@@ -23,15 +24,67 @@
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     z-index: 5;
+    box-shadow: $boxShadow;
     img {
         width: 30%;
     }
-    .modalClose {
+    .closeModal {
         align-self: flex-end;
+        font-size: 1.5rem;
+        color: darkgray;
+        transition: all 0.25s;
+        cursor: pointer;
+        &:hover {
+            color: $lightgreen;
+        }
+    }
+    h2 {
+        padding: 1.5rem 0;
+        color: $black;
     }
     form {
+        width: 90%;
         display: flex;
         flex-direction: column;
+        padding: 1rem 0;
+        input[type=text] {
+            padding: 1rem;
+            outline: none;
+            &:focus {
+                border: 2px solid $lightgreen;
+            }
+        }
+        button {
+            all: revert;
+            background-color: $lightgreen;
+            border: none;
+            color: $white;
+            padding: 1rem;
+            margin-top: 0.75rem;
+            text-transform: uppercase;
+            font-size: 1.15rem;
+            letter-spacing: 0.2rem;
+            transition: all 0.25s;
+            cursor: pointer;
+            &:hover {
+                background-color: $black;
+            }
+       }
+    }
+    .disclaimer {
+        color: grey;
+        font-size: 0.7rem;
+        padding-bottom: 1rem;
+    }
+    .modalLinks {
+        display: flex;
+        width: 90%;
+        justify-content: space-between;
+        a {
+            color: grey;
+            font-size: 0.6rem;
+            text-decoration: underline;
+        }
     }
 }
 
