--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -321,10 +321,12 @@ header nav {
         text-transform: uppercase;
         text-decoration: underline;
         font-family: $primaryFont;
+        letter-spacing: 0.05rem;
     }
 
     .moneyTings {
         width: 100%;
+        border-top: 1px solid $lightgrey;
     }
 
     .subTotal,
@@ -343,7 +345,7 @@ header nav {
 
     .finalTotal {
         padding-bottom: 2rem;
-        border-top: 1px solid black;
+        border-top: 1px solid lightgrey;
     }
 
     .checkoutBtn {
