--- a/styles/style.css
+++ b/styles/style.css
@@ -1141,6 +1141,19 @@ header nav .navHover:hover::after {
   color: #fff;
 }
 
+.wishListIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.15rem;
+  margin-right: 1.5rem;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 1rem;
+  border: 1px black solid;
+  cursor: pointer;
+}
+
 header {
   height: 100vh;
   overflow: hidden;
@@ -1243,9 +1256,9 @@ header .hero .imageContainer img:hover {
 .productGallery li {
   max-width: 24%;
   margin-bottom: 3rem;
-  position: relative;
   border: 1.5px solid #EAEAEA;
   border-radius: 10px;
+  position: relative;
   transition: 0.4s ease-in-out;
 }
 .productGallery li:hover {
@@ -1268,7 +1281,7 @@ header .hero .imageContainer img:hover {
   border-radius: 1.3rem;
   box-shadow: 0 0 0 rgba(0, 0, 0, 0.25);
   position: absolute;
-  top: 0.75rem;
+  bottom: 10.75rem;
   right: 0.75rem;
   cursor: pointer;
   transition: all 0.25s;
